Fixed coming soon with issue causing white space

--- a/src/containers/specialsContainer/styles.scss
+++ b/src/containers/specialsContainer/styles.scss
@@ -7,7 +7,6 @@
 }
 
 .comingSoon {
-  width: 100%;
   h2 {
     font-size: 3.5rem;
     font-weight: 800;
